Fixed title align in demo theme

--- a/horizon/_theme/templates/pages/css/style.scss
+++ b/horizon/_theme/templates/pages/css/style.scss
@@ -3,7 +3,7 @@
 }
 
 #page-header {
-  margin: 20px 10px;
+  margin: 20px 0;
   text-align: center;
 }
 
